--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,21 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- Include the toolbar at the top -->
+    <include
+        layout="@layout/league_toolbar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/league_toolbar1" />
+
+    <!-- Fragment container positioned between the toolbar and bottom navigation -->
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_below="@id/league_toolbar1"
         android:layout_above="@id/bottom_navigation"
         app:navGraph="@navigation/nav_graph"
         app:defaultNavHost="true" />
 
-    <FrameLayout
-        android:id="@+id/fl_wrapper"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/nav_host_fragment" />
-
+    <!-- Bottom navigation bar -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
