--- a/app/src/main/res/layout/fragment_league.xml
+++ b/app/src/main/res/layout/fragment_league.xml
@@ -6,86 +6,40 @@
     android:layout_height="match_parent"
     tools:context=".LeagueFragment">
 
-    <!-- League Name -->
-    <ImageButton
-        android:id="@+id/teamInfoButton"
-        android:layout_width="56dp"
-        android:layout_height="53dp"
-        android:background="?android:attr/selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_info"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:elevation="4dp" />
 
-    <TextView
-        android:id="@+id/leagueName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="League Name"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias="0.1" />
-
-    <!-- Team Name -->
-    <TextView
-        android:id="@+id/teamName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Team Name"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/leagueName"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias="0.2" />
-
-    <!-- Team Info Button -->
-
-    <!-- Toolbar with hamburger menu -->
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/leagueToolbar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:navigationIcon="@drawable/ic_hamburger_menu"
-        android:focusable="false"
-        android:clickable="false"/>
 
     <!-- Draft message TextView -->
 
-    <!-- Enter Draft Room Button -->
+    <!-- Draft Countdown TextView -->
 
     <TextView
         android:id="@+id/draftMessageTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="144dp"
-        android:gravity="center|center_horizontal|center_vertical"
+        android:gravity="center"
         android:text="The Draft Countdown will display here once the commissioner sets the date and time"
         android:textSize="18sp"
         android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/teamName" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.349" />
 
     <TextView
         android:id="@+id/draftCountdownTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="156dp"
         android:textSize="18sp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/teamName" />
+        app:layout_constraintTop_toBottomOf="@id/draftMessageTextView" />
+
+    <!-- Enter Draft Room Button -->
+
+    <!-- RecyclerView for Roster -->
 
     <Button
         android:id="@+id/enterDraftRoomButton"
@@ -95,17 +49,18 @@
         android:text="Enter Draft Room"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/draftMessageTextView" />
+        app:layout_constraintTop_toBottomOf="@id/draftCountdownTextView" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewRoster"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/teamName" />
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
