--- a/app/src/main/res/layout/fragment_league_settings.xml
+++ b/app/src/main/res/layout/fragment_league_settings.xml
@@ -8,41 +8,20 @@
     tools:context=".LeagueSettingsFragment">
 
     <!-- Toolbar with hamburger menu and league name -->
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/leagueToolbar"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="@drawable/ic_hamburger_menu"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
     <!-- Draft Settings Header -->
-    <TextView
-        android:id="@+id/leagueName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="League Name"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/draftSettingsHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:text="Draft Settings"
+        android:textColor="?android:textColorSecondary"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="?android:textColorSecondary"
-        app:layout_constraintTop_toBottomOf="@id/leagueName"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="24dp"
-        android:layout_marginStart="16dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Draft Settings Section -->
     <androidx.cardview.widget.CardView
