--- a/app/src/main/res/menu/league_menu.xml
+++ b/app/src/main/res/menu/league_menu.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/action_league_info"
-        android:title="League Info" />
+        android:id="@+id/action_team_info"
+        android:title="Team Info" />
     <item
         android:id="@+id/action_invite_friends"
         android:title="Invite Friends" />
@@ -16,6 +16,14 @@
     <item
         android:id="@+id/action_league_settings"
         android:title="League Settings"
+        android:visible="false" />
+    <item
+        android:id="@+id/action_home_Setting"
+        android:title="Settings"
+        android:visible="false" />
+    <item
+        android:id="@+id/action_rules"
+        android:title="Rules"
         android:visible="false" />
 
 </menu>
