--- a/app/src/main/res/layout/fragment_team_info.xml
+++ b/app/src/main/res/layout/fragment_team_info.xml
@@ -6,28 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- Toolbar for back navigation -->
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/teamInfoToolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/button_color"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="@drawable/ic_arrow_back"
-        app:title="Your Team"
-        app:titleTextColor="@color/button_text_color" />
 
     <!-- Main content scroll view -->
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:background="@color/background"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/teamInfoToolbar">
+       >
 
         <LinearLayout
             android:layout_width="match_parent"
