Implement league standings

--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -17,5 +17,9 @@
         android:id="@+id/ic_Chat"
         android:icon="@drawable/ic_chat"
         android:title="Chat"/>
+    <item
+        android:id="@+id/ic_standing"
+        android:icon="@drawable/ic_standing"
+        android:title="Standing"/>
 
 </menu>
