--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
     <color name="button_color">#1d428a</color>
     <color name="text_color">#000000</color>
     <color name="button_text_color">#FFFFFF</color>
+    <color name="gold">#CFAF00</color>
+    <color name="silver">#C0C0C0</color>
+    <color name="bronze">#CD7F32</color>
 </resources>
