--- a/app/src/main/res/layout/fragment_player_info.xml
+++ b/app/src/main/res/layout/fragment_player_info.xml
@@ -74,7 +74,12 @@
 
             </LinearLayout>
         </LinearLayout>
-
+        <Button
+            android:id="@+id/tradeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"/>
         <TextView
             android:id="@+id/statsHeader"
             android:layout_width="wrap_content"
