--- a/app/src/main/res/layout/sticky_header_layout.xml
+++ b/app/src/main/res/layout/sticky_header_layout.xml
@@ -4,33 +4,40 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="8dp"
-    android:background="@android:color/white">
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:background="@android:color/white"
+    android:gravity="center_vertical">  <!-- Ensures vertical centering -->
+
+    <TextView
+        android:layout_width="120dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:text="PLAYERS"
+        android:textStyle="bold"
+        android:gravity="center" />  <!-- Centers text horizontally -->
 
     <TextView
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:text="Players"
-        android:textStyle="bold" />
+        android:text="POINTS"
+        android:textStyle="bold"
+        android:gravity="center" />  <!-- Centers text horizontally -->
 
     <TextView
         android:layout_width="0dp"
         android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:text="Score"
-        android:textStyle="bold" />
+        android:text="REB"
+        android:textStyle="bold"
+        android:gravity="center" />  <!-- Centers text horizontally -->
 
     <TextView
-        android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_width="69dp"
         android:layout_height="wrap_content"
-        android:text="AVG"
-        android:textStyle="bold" />
-
-    <TextView
-        android:layout_width="0dp"
         android:layout_weight="1"
-        android:layout_height="wrap_content"
-        android:text="Min"
-        android:textStyle="bold" />
+        android:gravity="center"
+        android:text="AST"
+        android:textStyle="bold" />  <!-- Centers text horizontally -->
 </LinearLayout>
