--- a/app/src/main/res/layout/fragment_player_info.xml
+++ b/app/src/main/res/layout/fragment_player_info.xml
@@ -21,8 +21,8 @@
             android:textColor="@android:color/black" />
 
         <LinearLayout
-            android:layout_width="330dp"
-            android:layout_height="101dp"
+            android:layout_width="327dp"
+            android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:padding="16dp">
@@ -69,7 +69,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Status"
-                    android:textColor="@android:color/darker_gray"
+                    android:textColor="@color/text_color"
                     android:textSize="16sp" />
 
             </LinearLayout>
