--- a/app/src/main/res/layout/fragment_edit_team_info.xml
+++ b/app/src/main/res/layout/fragment_edit_team_info.xml
@@ -7,17 +7,6 @@
     android:layout_height="match_parent">
 
     <!-- Toolbar for back navigation -->
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/editTeamToolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/button_color"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navigationIcon="@drawable/ic_arrow_back"
-        app:title="Edit Your Team"
-        app:titleTextColor="@color/button_text_color" />
 
 
     <!-- Main content scroll view -->
@@ -26,7 +15,7 @@
         android:layout_height="0dp"
         android:background="@color/background"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/editTeamToolbar">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
